[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[tool.isort]
# https://github.com/PyCQA/isort/wiki/isort-Settings
profile = "black"
# will group `import x` and `from x import` of the same module.
force_sort_within_sections = true
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
known_first_party = []

known_third_party = [
    "click",
    "invoke",
    "pytest",
    "pytest_regressions",
    "setuptools",
    "structlog",
    "urllib3",
]


[tool.black]
line-length = 120
